// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mod service views fetches mod service 1`] = `
Object {
  "cid": "cids(0)",
  "creator": Object {
    "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)@jpeg",
    "description": "its me!",
    "did": "user(0)",
    "displayName": "ali",
    "handle": "alice.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [
      Object {
        "cid": "cids(2)",
        "cts": "1970-01-01T00:00:00.000Z",
        "neg": false,
        "src": "user(0)",
        "uri": "record(3)",
        "val": "self-label-a",
      },
      Object {
        "cid": "cids(2)",
        "cts": "1970-01-01T00:00:00.000Z",
        "neg": false,
        "src": "user(0)",
        "uri": "record(3)",
        "val": "self-label-b",
      },
    ],
    "viewer": Object {
      "blockedBy": false,
      "followedBy": "record(2)",
      "following": "record(1)",
      "muted": false,
    },
  },
  "description": "alices labeler",
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "labels": Array [],
  "likeCount": 1,
  "policies": Object {
    "description": "long policy description",
    "labelValues": Array [
      "spam",
      "!hide",
      "scam",
      "impersonation",
    ],
    "reportReasons": Array [
      "com.atproto.moderation.defs#reasonSpam",
      "com.atproto.moderation.defs#reasonOther",
    ],
  },
  "uri": "record(0)",
  "viewer": Object {
    "like": "record(4)",
  },
}
`;

exports[`mod service views fetches multiple mod services 1`] = `
Object {
  "views": Array [
    Object {
      "cid": "cids(0)",
      "creator": Object {
        "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)@jpeg",
        "description": "its me!",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [
          Object {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "neg": false,
            "src": "user(0)",
            "uri": "record(3)",
            "val": "self-label-a",
          },
          Object {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "neg": false,
            "src": "user(0)",
            "uri": "record(3)",
            "val": "self-label-b",
          },
        ],
        "viewer": Object {
          "blockedBy": false,
          "followedBy": "record(2)",
          "following": "record(1)",
          "muted": false,
        },
      },
      "description": "alices labeler",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "likeCount": 1,
      "uri": "record(0)",
      "viewer": Object {
        "like": "record(4)",
      },
    },
    Object {
      "cid": "cids(3)",
      "creator": Object {
        "avatar": "https://bsky.public.url/img/avatar/plain/user(3)/cids(1)@jpeg",
        "description": "hi im bob label_me",
        "did": "user(2)",
        "displayName": "bobby",
        "handle": "bob.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "viewer": Object {
          "blockedBy": false,
          "muted": false,
        },
      },
      "description": "bobs labeler",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "likeCount": 0,
      "uri": "record(5)",
      "viewer": Object {},
    },
  ],
}
`;
